--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
+    "angular-in-memory-web-api": "^0.8.0",
     "bootstrap": "^4.2.1",
     "core-js": "~2.4.1",
     "jquery": "^3.3.1",
